feat: Adding scrollIndicator to the ListView in Beagle Android (#1318)
* add attribute enable and disable scroll bar

* update tests list view

* remove attribute list-view backend

* add attribute enable and disable scroll bar

* update viewFactory file

* update gem file

* adjust prefix

* adjust unit test

Co-authored-by: uziasferreirazup <uzias.ferreira@zup.com.br>

--- a/android/beagle/src/main/res/values/style.xml
+++ b/android/beagle/src/main/res/values/style.xml
@@ -16,10 +16,13 @@
   -->
 
 <resources>
-    <item name="beagle_toolbar_text" type="id" />
-    <item name="beagle_component_tag" type="id" />
-    <item name="beagle_context_view" type="id" />
-    <item name="beagle_default_id" type="id" />
-    <item name="beagle_auto_generate_id_enabled" type="id" />
-    <item name="beagle_initiable_component" type="id" />
+
+    <style name="Beagle.Widget.ScrollIndicatorVertical" parent="android:Widget">
+        <item name="android:scrollbars">vertical</item>
+    </style>
+
+    <style name="Beagle.Widget.ScrollIndicatorHorizontal" parent="android:Widget">
+        <item name="android:scrollbars">horizontal</item>
+    </style>
+
 </resources>
