schema - swift name adapt ContextComponent

--- a/schema-ruby-erb/model_generation/Templates/swift.erb
+++ b/schema-ruby-erb/model_generation/Templates/swift.erb
@@ -273,8 +273,8 @@
   def adaptTypeNameToSwiftSpecific(typeName)
     if typeName.eql?(FlexWrap.new.name)
       "Wrap"
-    elsif typeName.eql?(ContextComponent.new.name)
-      "HasContext"
+    # elsif typeName.eql?(ContextComponent.new.name)
+    #   "HasContext"
     elsif typeName.eql?("ContextData")
       "DynamicObject"
     elsif typeName.eql?(SwiftCustom.new("WidgetProperties").name)
