feat: Adds Android GridView
Signed-off-by: paulomeurerzup <paulo.meurer@zup.com.br>

--- a/android/sample/src/main/res/menu/menu_navigation_drawer.xml
+++ b/android/sample/src/main/res/menu/menu_navigation_drawer.xml
@@ -95,6 +95,12 @@
         tools:ignore="HardcodedText" />
 
     <item
+        android:id="@+id/gridView"
+        android:icon="@mipmap/ic_launcher"
+        android:title="GridView"
+        tools:ignore="HardcodedText" />
+
+    <item
         android:id="@+id/webView"
         android:icon="@mipmap/ic_launcher"
         android:title="WebView"
