feat: add Android PullToRefresh component
Signed-off-by: Paulo Cesar Meurer <paulo.meurer@zup.com.br>

--- a/android/sample/src/main/res/menu/menu_navigation_drawer.xml
+++ b/android/sample/src/main/res/menu/menu_navigation_drawer.xml
@@ -101,6 +101,12 @@
         tools:ignore="HardcodedText" />
 
     <item
+        android:id="@+id/pullToRefresh"
+        android:icon="@mipmap/ic_launcher"
+        android:title="PullToRefresh"
+        tools:ignore="HardcodedText" />
+
+    <item
         android:id="@+id/webView"
         android:icon="@mipmap/ic_launcher"
         android:title="WebView"
